demo/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  namespace: dev
  labels:
    app: demo-app
    app.kubernetes.io/name: demo-app
    env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
        app.kubernetes.io/name: demo-app
        env: dev
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: demo-app
        image: ghcr.io/lovius215/demo01:dev-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8090
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
