demo/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: dev
  labels:
    app: demo-app
    app.kubernetes.io/name: demo-app
    env: dev
spec:
  type: NodePort
  ports:
    - name: http
      port: 8090
      targetPort: 8090
      nodePort: 30090
  selector:
    app: demo-app
